--- a/shell/assets/styles/global/_labeled-input.scss
+++ b/shell/assets/styles/global/_labeled-input.scss
@@ -43,11 +43,17 @@
     .error {
       color: var(--error);
     }
+    .valid {
+      color: var(--success);
+    }
   }
 
   .required {
     &.error {
       color: var(--error);
+    }
+    &.valid {
+      color: var(--success);
     }
     font-size: 16px;
     font-weight: bolder;
@@ -166,4 +172,8 @@
 
 .labeled-input-error {
   border-color: var(--error);
+}
+
+.labeled-input-valid {
+  border-color: var(--success);
 }
