--- a/shell/assets/styles/global/_select.scss
+++ b/shell/assets/styles/global/_select.scss
@@ -23,6 +23,10 @@
 
   .required {
     color: var(--error);
+    // font-size: 16px;
+    // font-weight: bolder;
+    // display: inline-block;
+    // vertical-align: middle;
   }
 
   label {
